0032678: Coding Rules, ApproxInt_SvSurfaces - eliminate GCC -fsanitize=undefined error

ApproxInt_SvSurfaces::myUseSolver is now initialized by default constructor.